Fix horizontal spacing of CMB2 fields in the admin

--- a/includes/admin/assets/css/admin.css
+++ b/includes/admin/assets/css/admin.css
@@ -31,3 +31,7 @@ a#upstream-upgrade-link,
 #upstream_mimlestone_data select {
     width: 100%;
 }
+
+.cmb2-wrap .row {
+    margin-top: 15px;
+}
